# ytty-spider

./: .gitignore  .gitmodules  downloadchromedriver.py  init.py  log.py  pyproject.toml  pyvenv.cfg  requirements.txt
app/: main.py
app/DataEngine/: deserialise.py  helper.py
app/DataEngine/deserialiser/: channelData.py
app/Engines/DataEngine/: deserialise.py  helper.py
app/Engines/FetchEngine/: endpoint.py  requests.py
app/Engines/RestEngine/: Validation.py
app/FetchEngine/: endpoint.py  requests.py
app/REST/: Validation.py
app/REST/Routes/: channels.py
app/RESTHandler/: Validation.py
app/Raw/: manager.py
app/Videos/Details/: manager.py
app/YouTube/: requests.py
app/authentication/: Session.py  auth.py
app/common/: payload.py  to_dict.py  urls.py
app/dataHandler/: deserialise.py  extract.py  helper.py
app/dataHandler/deserialiser/: channelData.py
app/dataclass/: Base.py  common.py
app/dataclass/ChannelDataClasses/: ChannelMeta.py  about.py  params.py
app/dataclass/VideoDataClasses/: Comments.py  Interactions.py  Video.py  videoMini.py
app/fetchHandler/: Endpoint.py  Youtube.py  endpoint.py  requests.py  video.py  yt_api.py
app/helper/: keys.py  selectiveParam.py  time_to_seconds.py  to_dict.py
app/helperLib/: selectiveParam.py  to_dict.py
app/model/: WebDriver.py
app/services/: channelManager.py  fetch.py  videoManager.py
app/type/: Base.py  Comments.py  Interactions.py  Video.py  common.py  fetchType.py
chatgpt/: fetch.py
model/: WebDriver.py
services/helper/: deserialise.py
services/video/: details.py
(+31 files in other folders)
