[tool.poetry]
name = "ytty-spider"
version = "0.1.0"
description = ""
authors = ["Dvain84143 <dvnasutosh@gmail.com>"]
readme = "README.md"
packages = [{include = "ytty_spider"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
numpy = "^1.24.1"
pandas = "^1.5.3"
selenium = "^4.8.0"
bs4 = "^0.0.1"
py-mon = "^1.1.0"
watchdog = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
